--- a/Photo/Photo/View/Base.lproj/Main.storyboard
+++ b/Photo/Photo/View/Base.lproj/Main.storyboard
@@ -16,47 +16,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="89p-86-rZw">
-                            <size key="itemSize" width="195" height="150"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="89p-86-rZw">
+                            <size key="itemSize" width="120" height="140"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="5" minY="5" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="79l-M3-HP1" customClass="PhotosCollectionViewCell" customModule="Photo" customModuleProvider="target">
-                                <rect key="frame" x="5" y="5" width="196" height="175"/>
+                                <rect key="frame" x="20" y="20" width="120" height="140"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DJG-g4-d6L">
-                                    <rect key="frame" x="0.0" y="0.0" width="196" height="175"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fty-xp-1du">
-                                            <rect key="frame" x="0.0" y="0.0" width="196" height="175"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="117" height="133.5"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nMD-gA-86I">
-                                                    <rect key="frame" x="0.0" y="0.0" width="196" height="150"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="150" id="GVY-7b-dfD"/>
-                                                        <constraint firstAttribute="width" constant="195" id="aH2-jm-HOA"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="0.0" y="0.0" width="117" height="113"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DRb-J2-9gw">
-                                                    <rect key="frame" x="0.0" y="150" width="196" height="25"/>
+                                                    <rect key="frame" x="0.0" y="113" width="117" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="DRb-J2-9gw" firstAttribute="top" secondItem="nMD-gA-86I" secondAttribute="bottom" id="0WB-Wu-Pje"/>
+                                                <constraint firstAttribute="trailing" secondItem="nMD-gA-86I" secondAttribute="trailing" id="rO4-lw-RMO"/>
+                                            </constraints>
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="fty-xp-1du" firstAttribute="leading" secondItem="DJG-g4-d6L" secondAttribute="leading" id="0yb-Hh-z7T"/>
-                                        <constraint firstItem="fty-xp-1du" firstAttribute="top" secondItem="DJG-g4-d6L" secondAttribute="top" id="7Ny-Dj-RbU"/>
-                                        <constraint firstAttribute="bottom" secondItem="fty-xp-1du" secondAttribute="bottom" id="HqM-d1-FtB"/>
-                                        <constraint firstAttribute="trailing" secondItem="fty-xp-1du" secondAttribute="trailing" id="kXK-l7-kXE"/>
+                                        <constraint firstItem="fty-xp-1du" firstAttribute="leading" secondItem="DJG-g4-d6L" secondAttribute="leading" id="4av-PP-VAc"/>
+                                        <constraint firstAttribute="bottom" secondItem="DRb-J2-9gw" secondAttribute="bottom" constant="6.5" id="PTq-6P-ViN"/>
+                                        <constraint firstItem="fty-xp-1du" firstAttribute="top" secondItem="DJG-g4-d6L" secondAttribute="top" id="XVJ-N9-sKi"/>
+                                        <constraint firstAttribute="bottom" secondItem="fty-xp-1du" secondAttribute="bottom" constant="6.5" id="ejy-Ln-INg"/>
+                                        <constraint firstAttribute="trailing" secondItem="fty-xp-1du" secondAttribute="trailing" constant="3" id="uUP-iS-83h"/>
                                     </constraints>
                                 </collectionViewCellContentView>
-                                <size key="customSize" width="196" height="175"/>
+                                <size key="customSize" width="120" height="140"/>
                                 <connections>
                                     <outlet property="imageView" destination="nMD-gA-86I" id="wf3-XF-eoS"/>
                                     <outlet property="titleLabel" destination="DRb-J2-9gw" id="ZEY-h5-gBP"/>
@@ -110,14 +111,14 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="31" height="30"/>
                                                 <state key="normal" title="Blue"/>
                                                 <connections>
-                                                    <action selector="blueThemeButton:" destination="Cb3-0p-7qt" eventType="touchUpInside" id="FUc-bZ-LQh"/>
+                                                    <action selector="selectBlueTheme:" destination="Cb3-0p-7qt" eventType="touchUpInside" id="ILG-Ee-xmX"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2l-sG-PyD">
                                                 <rect key="frame" x="127" y="0.0" width="33" height="30"/>
                                                 <state key="normal" title="Dark"/>
                                                 <connections>
-                                                    <action selector="darkThemeButton:" destination="Cb3-0p-7qt" eventType="touchUpInside" id="hxK-FS-Fhi"/>
+                                                    <action selector="selectDarkTheme:" destination="Cb3-0p-7qt" eventType="touchUpInside" id="iEZ-Ga-RE1"/>
                                                 </connections>
                                             </button>
                                         </subviews>
